--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,11 @@ h1 {
     padding: 5px;
     text-align:center;
  }
+
+ hr.style-seven {
+    height: 30px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px 0 0 0;
+    border-radius: 15px;
+}
