--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,9 @@ h1 {
  }
 
  hr.style-seven {
-    height: 12px;
-    border: 0;
-    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+    height: 30px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px 0 0 0;
+    border-radius: 15px;
 }
