--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ h1 {
     text-align:center;
     margin: auto;
     width: 60%;
-    border:3px solid #8AC007;
+    border:3px solid black;
     padding: 10px;
  }
 
@@ -23,4 +23,15 @@ h1 {
     border-color: black;
     border-width: 1px 0 0 0;
     border-radius: 15px;
+}
+
+hr.style-seven:before { /* Not really supposed to work, but does */
+    display: block;
+    content: "";
+    height: 30px;
+    margin-top: -31px;
+    border-style: solid;
+    border-color: black;
+    border-width: 0 0 1px 0;
+    border-radius: 20px;
 }
