--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,11 @@ h1 {
     text-align:center;
     margin: auto;
     width: 60%;
-    border:3px solid black;
+    border:3px solid red;
     padding: 10px;
  }
 
- hr.style-seven {
+ hr.sepStyle {
     height: 30px;
     border-style: solid;
     border-color: black;
@@ -25,7 +25,7 @@ h1 {
     border-radius: 15px;
 }
 
-hr.style-seven:before { /* Not really supposed to work, but does */
+hr.sepStyle:before { /* Before means that CSS knows to put this before the one above 'cause it's smart*/ 
     display: block;
     content: "";
     height: 30px;
